# point-cloud-registration

./: CMakeLists.txt  README.md  SO3.hpp
.github/workflows/: cmake.yml
results/: results.md
src/: gsec.cpp  gsec.hpp  icp.cpp  icp.hpp  main.cpp  utils.cpp  utils.hpp
